--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -15,3 +15,41 @@
         column-gap: 20px;
     }
 }
+
+.category-preview-container {
+@media (max-width: 639px) {
+  margin-bottom: 25px;
+
+  .preview {
+    grid-template-columns: 1fr;
+    column-gap: 30px;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 767px) {
+  margin-bottom: 25px;
+  .preview {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  margin-bottom: 25px;
+  .preview {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  margin-bottom: 25px;
+  .preview {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1536px) {
+  .preview {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+}
