--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -6,6 +6,13 @@
     align-items: center;
     position: relative;
 
+    .footer {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 5px;
+    }
+
     img {
         width: 100%;
         height: 95%;
@@ -29,10 +36,10 @@
             opacity: 0.8;
         }
     }
+}
 
-    .footer {
-        display: flex;
-        justify-content: space-between;
-        // color: black;
+@media screen and (max-width: 768px) {
+    .product-card-component {
+        margin: 25px 0;
     }
 }
