--- a/src/routes/auth/auth.styles.scss
+++ b/src/routes/auth/auth.styles.scss
@@ -1,3 +1,13 @@
 .auth-container {
     margin: 30px auto;
+    display: flex; 
+    justify-content: space-around;
+    gap: 20px;
+}
+
+@media (max-width: 767px) {
+  .auth-container {
+    display: block;
+    margin: 20px auto;
+  }
 }
