--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+    box-sizing: border-box;
 
     .checkout-header {
         width: 100%;
@@ -12,13 +13,14 @@
         display: flex;
         justify-content: space-between;
         border-bottom: 1px solid darkgrey;
+        box-sizing: border-box;
 
         .header-block {
             text-transform: capitalize;
             width: 18%;
 
             &:last-child {
-                width: 7%;
+                width: 5%;
             }
         }
     }
@@ -26,6 +28,6 @@
     .total {
         margin-top: 30px;
         margin-left: auto;
-        font-size: 36px;
+        font-size: 28px;
     }
 }
