--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -1,5 +1,6 @@
 .checkout-container {
     width: 100%;
+    overflow-x: scroll;
     min-height: 90vh;
     display: flex;
     flex-direction: column;
