--- a/src/routes/checkout-confirmation/checkout-confirmation.styles.scss
+++ b/src/routes/checkout-confirmation/checkout-confirmation.styles.scss
@@ -1,12 +1,13 @@
 .checkout-confirm-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 
     .main-header {
         font-weight: bold;
-        font-size: large;
-        margin-bottom: 10px;
+        font-size: 36px;
 
         span {
             color: rgb(200, 50, 100);
@@ -14,7 +15,7 @@
     }
 
     .smaller-header {
-        font-size: medium;
+        font-size: 24px;
     }
 
     .button-container {
@@ -22,6 +23,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: row;
         gap: 25px;
     }
 }
