--- a/src/routes/checkout-confirmation/checkout-confirmation.styles.scss
+++ b/src/routes/checkout-confirmation/checkout-confirmation.styles.scss
@@ -3,11 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
 
     .main-header {
         font-weight: bold;
         font-size: 36px;
+        text-align: center;
 
         span {
             color: rgb(200, 50, 100);
@@ -16,10 +17,11 @@
 
     .smaller-header {
         font-size: 24px;
+        text-align: center;
     }
 
     .button-container {
-        margin-top: 20px;
+        margin-top: 25px;
         display: flex;
         align-items: center;
         justify-content: center;
